Fix nav-brand bold and spacing

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -7,6 +7,8 @@
 .navbar-brand {
     color: $navbar-inverse-active-color;
     font-family: $font-family-sans-serif-headings;
+    font-weight: $font-weight-bold;
+    letter-spacing: 0.040em;
 }
 
 .color {
